# pyAMPP

./: .cruft.json  .flake8  .gitignore  .gitmodules  .rtd-environment.yml  .ruff.toml  MANIFEST.in  README.rst  pyproject.toml  setup.py  suncast-roadmap.md  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  conf.py.rej  index.rst
examples/: create_box.py
licenses/: LICENSE.rst
pyampp/data/: __init__.py  downloader.py
pyampp/gxbox/: __init__.py  box_factory.py  boxutils.py  coordinates-los-demo.py  gxampp.py  gxbox_factory.py  magfield_viewer.py  magfield_viewer_bk.py
pyampp/gxbox/UI/: gxampp.ui  gxbox.ui
pyampp/tests/: test_compare_b3d.ipynb
pyampp/util/: MagFieldWrapper.py  compute.py  config.py
